- Fixed bug #47443 (metaphone('scratch') returns wrong result)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@276117 c90b9560-bf6c-de11-be94-00142212c4b1